--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">CineRush</string>
+    <string name="facebook_app_id">327256524313027</string>
+
 </resources>
